tests/valid-gd-scripts/multiline-subscription-expression.gd
class X:
	func foo(p):
		var x = p[
			1
		]
