tests/invalid-gd-scripts/type-cast-w-subscription.gd
func foo(x):
	[1] as Array [0]
